--- a/SuperHero/Views/Home/Index.cshtml
+++ b/SuperHero/Views/Home/Index.cshtml
@@ -4,5 +4,10 @@
 
 <div class="text-center">
     <h1 class="display-4">Welcome</h1>
-    <p>Learn about <a href="https://docs.microsoft.com/aspnet/core">building Web apps with ASP.NET Core</a>.</p>
+    <p>This website contains Super Heroes.</p>
+</div>
+
+<div class="text-center">
+    <h1 class="display-4">Batman is my favorite Super Hero!</h1>
+    <img class="embed-responsive" src="~/batman.png" />
 </div>
